--- a/android/app/src/main/res/layout/competition.xml
+++ b/android/app/src/main/res/layout/competition.xml
@@ -7,7 +7,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Competition view"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:background="#ff0000"/>
 
     <ImageView
         android:layout_width="wrap_content"
