--- a/android/app/src/main/res/layout/main.xml
+++ b/android/app/src/main/res/layout/main.xml
@@ -18,7 +18,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:visibility="gone">
 
         <LinearLayout
             android:id="@+id/llMainTab"
