--- a/android/app/src/main/res/layout/list_item_checkable.xml
+++ b/android/app/src/main/res/layout/list_item_checkable.xml
@@ -1,28 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="@dimen/item_height"
-  android:orientation="horizontal">
-  <ImageView
-    android:id="@id/drag_handle"
-    android:background="@drawable/drag"
-    android:layout_width="wrap_content"
-    android:layout_height="@dimen/item_height"
-    android:layout_weight="0" />
-  <CheckedTextView
-    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
-    android:id="@+id/text"
-    android:layout_width="wrap_content"
-    android:layout_height="@dimen/item_height"
-    android:layout_weight="1"
-    android:textAppearance="?android:attr/textAppearanceMedium"
-    android:gravity="center_vertical"
-    android:paddingLeft="8dp" />
-  <ImageView
-    android:id="@id/click_remove"
-    android:background="@drawable/delete_x"
-    android:layout_width="@dimen/item_height"
-    android:layout_height="@dimen/item_height"
-    android:layout_weight="0" />
-</LinearLayout>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="70dp"
+    android:padding="10dp">
+    <CheckBox
+        android:id="@+id/checkbox"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/stock_edit_checkbox"/>
+    <LinearLayout
+        android:layout_toRightOf="@id/checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="10dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:textSize="18sp"/>
+        <TextView
+            android:id="@+id/symbol"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:textColor="#5f5f5f"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@id/drag_handle"
+        android:layout_alignParentRight="true"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:gravity="center">
+
+        <ImageView
+            android:background="@drawable/sliding"
+            android:layout_width="22dp"
+            android:layout_height="22dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/pushToTop"
+        android:layout_toLeftOf="@id/drag_handle"
+        android:layout_width="50dp"
+        android:layout_marginRight="40dp"
+        android:layout_height="match_parent"
+        android:gravity="center">
+
+        <ImageView
+            android:background="@drawable/top"
+            android:layout_width="22dp"
+            android:layout_height="22dp"/>
+
+    </LinearLayout>
+
+
+</RelativeLayout>
