--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -2,5 +2,9 @@
 <resources>
     <color name="main_tab_text_color_active">#1789d5</color>
     <color name="main_tab_text_color_default">#949494</color>
+    <color name="title_blue">#1962dd</color>
+    <color name="white">#ffffff</color>
 
+    <color name="light_grey_transparent">#99BFBFBF</color>
+    <color name="transparent">@android:color/transparent</color>
 </resources>
