--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -2,4 +2,11 @@
 <resources>
     <dimen name="item_height">67dp</dimen>
     <dimen name="section_div_height">20dp</dimen>
+    <dimen name="toolbar_height">48dp</dimen>
+
+    <dimen name="tab_main_indicator_height">48dp</dimen>
+    <dimen name="tab_menu_height">48dp</dimen>
+    <dimen name="more_bang_text_size">16sp</dimen>
+    <dimen name="more_bang_item_height">56dp</dimen>
+    <dimen name="right_arrow_margin">15dp</dimen>
 </resources>
