Update a little bit.

--- a/android/app/src/main/res/layout/stock_edit.xml
+++ b/android/app/src/main/res/layout/stock_edit.xml
@@ -119,7 +119,8 @@
             android:text="@string/delete"
             android:layout_weight="1"
             android:layout_gravity="center"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:enabled="false"/>
 
     </LinearLayout>
 
