--- a/android/app/src/main/res/drawable/fade_red.xml
+++ b/android/app/src/main/res/drawable/fade_red.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:startColor="#660000ff"
-        android:endColor="#000000ff" />
+        android:startColor="#1954b9"
+        android:endColor="#99bfff" />
 </shape>
