--- a/ios/TH_CFD/MainStoryboard.storyboard
+++ b/ios/TH_CFD/MainStoryboard.storyboard
@@ -48,7 +48,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FsO-NY-fVx">
-                                        <rect key="frame" x="0.0" y="-5" width="60" height="40"/>
+                                        <rect key="frame" x="8" y="-5" width="60" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="ZNY-cF-Twr"/>
                                             <constraint firstAttribute="width" constant="60" id="oeV-nu-qaU"/>
@@ -67,7 +67,7 @@
                                     <constraint firstItem="dhq-GU-dFC" firstAttribute="centerY" secondItem="53d-61-UGc" secondAttribute="centerY" id="BEp-2S-TSO"/>
                                     <constraint firstAttribute="bottom" secondItem="53d-61-UGc" secondAttribute="bottom" constant="7" id="OEg-bT-Sap"/>
                                     <constraint firstAttribute="bottom" secondItem="KCJ-vF-tJa" secondAttribute="bottom" constant="7" id="Svf-fD-vJX"/>
-                                    <constraint firstItem="FsO-NY-fVx" firstAttribute="leading" secondItem="ezc-LV-pIO" secondAttribute="leading" id="Vgl-1D-nPD"/>
+                                    <constraint firstItem="FsO-NY-fVx" firstAttribute="leading" secondItem="ezc-LV-pIO" secondAttribute="leadingMargin" id="Vgl-1D-nPD"/>
                                     <constraint firstAttribute="trailing" secondItem="53d-61-UGc" secondAttribute="trailing" constant="15" id="We6-LN-F4j"/>
                                     <constraint firstItem="dhq-GU-dFC" firstAttribute="leading" secondItem="ezc-LV-pIO" secondAttribute="leading" constant="206" id="gDX-Zk-Orl"/>
                                     <constraint firstAttribute="bottom" secondItem="dhq-GU-dFC" secondAttribute="bottom" constant="7" id="gOG-Lw-3Kj"/>
