--- a/android/app/src/main/res/layout/stock_edit.xml
+++ b/android/app/src/main/res/layout/stock_edit.xml
@@ -68,7 +68,7 @@
     </RelativeLayout>
 
     <com.mobeta.android.dslv.DragSortListView
-        xmlns:dslv="http://schemas.android.com/apk/res/com.tradehero.th"
+        xmlns:dslv="http://schemas.android.com/apk/res/com.tradehero.cfd"
         android:id="@+id/stockList"
         android:layout_weight="1"
         android:layout_width="match_parent"
