--- a/android/app/src/main/res/layout/stock_edit.xml
+++ b/android/app/src/main/res/layout/stock_edit.xml
@@ -6,7 +6,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:padding="10dp"
         android:background="@color/title_blue">
         <CheckBox
@@ -19,10 +19,10 @@
         <LinearLayout
             android:layout_toRightOf="@id/checkbox"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="10dp"
-            android:orientation="vertical">
+            android:gravity="center">
 
             <TextView
                 android:layout_width="wrap_content"
