--- a/android/app/src/main/res/values-v21/styles.xml
+++ b/android/app/src/main/res/values-v21/styles.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-        <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-                <!-- Customize your theme here. -->
-                <item name="colorAccent">@color/title_blue</item>
+        <!--<style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">-->
+                <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+                <!--<item name="colorAccent">@color/title_blue</item>-->
 
-                <item name="android:windowTranslucentStatus">true</item>
-                <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-                <item name="android:statusBarColor">@android:color/transparent</item>
-                <item name="android:windowContentTransitions">true</item>
-                <item name="android:windowAllowEnterTransitionOverlap">true</item>
-                <item name="android:windowAllowReturnTransitionOverlap">true</item>
-                <item name="android:windowSharedElementEnterTransition">@android:transition/move
-                </item>
-                <item name="android:windowSharedElementExitTransition">@android:transition/move
-                </item>
-        </style>
+                <!--<item name="android:windowTranslucentStatus">true</item>-->
+                <!--<item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
+                <!--<item name="android:statusBarColor">@android:color/transparent</item>-->
+                <!--<item name="android:windowContentTransitions">true</item>-->
+                <!--<item name="android:windowAllowEnterTransitionOverlap">true</item>-->
+                <!--<item name="android:windowAllowReturnTransitionOverlap">true</item>-->
+                <!--<item name="android:windowSharedElementEnterTransition">@android:transition/move </item>-->
+                <!--<item name="android:windowSharedElementExitTransition">@android:transition/move </item>-->
+        <!--</style>-->
 </resources>
