--- a/ios/TH_CFD/MainStoryboard.storyboard
+++ b/ios/TH_CFD/MainStoryboard.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="4FL-Ng-cKU">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -77,7 +78,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9Dc-ei-Pxv">
-                                <rect key="frame" x="0.0" y="64" width="375" height="547"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="541"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EditStockCell" id="Gbq-ve-Epu" customClass="EditOwnStockCell" customModule="TH_CFD" customModuleProvider="target">
@@ -205,7 +206,7 @@
                             <constraint firstItem="IQG-T1-UU8" firstAttribute="leading" secondItem="K2M-Qe-J4D" secondAttribute="leading" id="8Qz-oU-FwU"/>
                             <constraint firstItem="ezc-LV-pIO" firstAttribute="height" secondItem="K2M-Qe-J4D" secondAttribute="height" multiplier="24:250" id="EbL-3U-jKE"/>
                             <constraint firstItem="9Dc-ei-Pxv" firstAttribute="leading" secondItem="K2M-Qe-J4D" secondAttribute="leading" id="F7x-iV-wYc"/>
-                            <constraint firstItem="9Dc-ei-Pxv" firstAttribute="bottom" secondItem="IQG-T1-UU8" secondAttribute="top" constant="6" id="G0H-ng-Yol"/>
+                            <constraint firstItem="9Dc-ei-Pxv" firstAttribute="bottom" secondItem="IQG-T1-UU8" secondAttribute="top" id="G0H-ng-Yol"/>
                             <constraint firstItem="IQG-T1-UU8" firstAttribute="height" secondItem="K2M-Qe-J4D" secondAttribute="height" multiplier="21:250" constant="5.9719999999999942" id="KCB-BB-Q3N"/>
                             <constraint firstAttribute="trailing" secondItem="ezc-LV-pIO" secondAttribute="trailing" id="M9b-k9-PZa"/>
                             <constraint firstAttribute="trailing" secondItem="9Dc-ei-Pxv" secondAttribute="trailing" id="MP0-La-47w"/>
