--- a/android/app/src/main/res/layout/stock_edit.xml
+++ b/android/app/src/main/res/layout/stock_edit.xml
@@ -48,6 +48,23 @@
 
         </LinearLayout>
 
+
+        <LinearLayout
+            android:id="@+id/notificationSwitch"
+            android:layout_toLeftOf="@id/pushToTop"
+            android:layout_width="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#abcaff"
+                android:textSize="18sp"
+                android:text="@string/notification_switch"/>
+        </LinearLayout>
+
         <LinearLayout
             android:id="@+id/pushToTop"
             android:layout_toLeftOf="@id/drag_handle"
