--- a/ios/TH_CFD/MainStoryboard.storyboard
+++ b/ios/TH_CFD/MainStoryboard.storyboard
@@ -133,6 +133,13 @@
                                                     <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="emP-fR-UTC" userLabel="Alert Button">
+                                                    <rect key="frame" x="156" y="14" width="46" height="30"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <connections>
+                                                        <action selector="tapAlertButton:" destination="Gbq-ve-Epu" eventType="touchUpInside" id="mLN-Vw-YRk"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="TkX-2n-Hbe" firstAttribute="top" secondItem="TGt-XL-eg5" secondAttribute="centerY" constant="6" id="H8J-zG-PWj"/>
@@ -148,6 +155,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="alertButton" destination="emP-fR-UTC" id="pSH-eP-HxE"/>
                                             <outlet property="codeLabel" destination="gfz-EQ-g5m" id="BYC-Fy-368"/>
                                             <outlet property="codeLabelLeftConstraint" destination="Jx1-Iv-OX5" id="W5o-oZ-l0D"/>
                                             <outlet property="nameLabel" destination="QcP-IO-3zC" id="cUN-hI-b6E"/>
@@ -230,6 +238,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jnq-2V-39B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="144.5" y="279.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="cMY-aF-lvC">
+            <objects>
+                <viewController storyboardIdentifier="ContainerViewController" id="Gkq-Yd-Gqs" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="R14-V6-tZf"/>
+                        <viewControllerLayoutGuide type="bottom" id="mRR-ao-djB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="12v-Qy-nbV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pfj-eI-NKn">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
+                                <connections>
+                                    <segue destination="4FL-Ng-cKU" kind="embed" id="Te2-6R-QJ6"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="pfj-eI-NKn" firstAttribute="centerY" secondItem="12v-Qy-nbV" secondAttribute="centerY" id="01E-G3-v9l"/>
+                            <constraint firstItem="pfj-eI-NKn" firstAttribute="width" secondItem="12v-Qy-nbV" secondAttribute="width" id="2Ts-pA-Skp"/>
+                            <constraint firstItem="pfj-eI-NKn" firstAttribute="height" secondItem="12v-Qy-nbV" secondAttribute="height" id="5Ks-BE-X1o"/>
+                            <constraint firstItem="pfj-eI-NKn" firstAttribute="centerX" secondItem="12v-Qy-nbV" secondAttribute="centerX" id="Zdj-ki-RIE"/>
+                        </constraints>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="320"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vt4-Y9-n3x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="567" y="421"/>
         </scene>
     </scenes>
     <resources>
